<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LapoMeter</string>
    <string name="action_settings">Settings</string>
    <string name="action_score">View Score</string>
    <string name="action_stop">Stop Race</string>
    <string name="start">START</string>
    <string name="stop">Stop</string>
    <string name="title_activity_participant_category">ParticipantCategory</string>
    <string name="name">Name</string>
    <string name="lap_time">Lap Time</string>
    <string name="title_activity_top_participants">TopParticipantsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_ac">Create Account</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="title_activity_participant_count">ParticipantCountActivity</string>
    <string name="part_count">No of Participants</string>
    <string name="exit">Exit</string>
    <string name="clear_db">Clear Database</string>
    <string name="title_activity_category_selection">CategorySelectionActivity</string>
    <string name="category1">3 KM</string>
    <string name="category2">5 KM</string>
    <string name="category3">10 KM</string>

</resources>
