<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/bg"
    tools:context="com.explore.lapometer.activities.CreateAccountActivity">

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="#23ffffff"
        android:hint="@string/username"
        android:id="@+id/editTextCreateUsername"
        android:paddingLeft="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#fff"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="#23ffffff"
        android:id="@+id/editTextCreatePassword"
        android:inputType="textPassword"
        android:fontFamily="sans"
        android:hint="@string/new_pass"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#fff"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="#23ffffff"
        android:id="@+id/editTextConfirmPassword"
        android:inputType="textPassword"
        android:fontFamily="sans"
        android:hint="@string/confirm_pass"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#fff"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#50ffffff"
        android:id="@+id/buttonCreateAccount"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_ac"/>
</LinearLayout>
