<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/bg"
    tools:context="com.explore.lapometer.activities.CategorySelectionActivity">

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/buttonCategory1"
        android:layout_marginTop="25dp"
        android:background="#50ffffff"
        android:text="@string/category1"
        android:textColor="#fff" />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/buttonCategory2"
        android:layout_marginTop="25dp"
        android:background="#50ffffff"
        android:text="@string/category2"
        android:textColor="#fff" />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:id="@+id/buttonCategory3"
        android:background="#50ffffff"
        android:text="@string/category3"
        android:textColor="#fff" />

</LinearLayout>
