<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    android:gravity="center_vertical"
    tools:context="com.explore.lapometer.activities.LoginActivity">

   <EditText
       android:layout_width="250dp"
       android:layout_height="45dp"
       android:background="#23ffffff"
       android:hint="@string/username"
       android:id="@+id/editTextUsername"
       android:paddingLeft="10dp"
       android:textColor="#fff"
       android:layout_gravity="center_horizontal"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="#23ffffff"
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:fontFamily="sans"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#fff"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#50ffffff"
        android:id="@+id/buttonLogin"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"/>
</LinearLayout>
